[NO-JIRA] Fix animate-height overflow

--- a/src/AnimateHeight/animate-height.scss
+++ b/src/AnimateHeight/animate-height.scss
@@ -13,9 +13,4 @@
       padding: 1rem;
     }
   }
-
-  &__children-container {
-    margin: -1rem;
-    padding: 1rem;
-  }
 }
